RESOLVED FIXED266593
[WebGPU] CTS api,validation,texture,destroy test is failing
https://bugs.webkit.org/show_bug.cgi?id=266593
Summary [WebGPU] CTS api,validation,texture,destroy test is failing
Mike Wyrzykowski
Reported 2023-12-18 12:48:34 PST
[WebGPU] CTS api,validation,texture,destroy test is failing Specifically this test case: webgpu:api,validation,texture,destroy:submit_a_destroyed_texture_as_attachment:*
Attachments
Radar WebKit Bug Importer
Comment 1 2023-12-18 12:48:50 PST
Mike Wyrzykowski
Comment 2 2023-12-18 15:10:34 PST
EWS
Comment 3 2024-01-06 00:17:27 PST
Committed 272725@main (c22ca9869356): <https://commits.webkit.org/272725@main> Reviewed commits have been landed. Closing PR #21994 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.